--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.2",
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.1",
     "@trpc/client": "^10.16.0",
     "@trpc/next": "^10.19.1",
@@ -33,10 +33,11 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.38.0",
     "eslint-config-next": "13.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.12.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.2.6",
     "typescript": "^5.0.2"
   },
